--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.30",
+    "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.4",
